--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -24,7 +24,7 @@ h1 {
 #sidebarContainer,
 #sidebarContainer iframe {
   width: 300px;
-  height: 500px;
+  height: 100%;
   border: none;
   overflow: hidden;
   margin: 0;
