DEV-11222: Many Fonts are wrong for Acrolinx Sign-In Feature

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -35,9 +35,12 @@ html, body, #app {
   height: 100%;
   overflow: hidden;
   font-size: 13px;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', 'Arial', sans-serif;
 }
 
+html #app input {
+  font-family: 'Roboto', 'Arial', sans-serif;
+}
 
 
 h1 {
