DEV-10190: Fixed Click on Acrolinx logo on login page opens acrolinx webpage within sidebar container

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -57,6 +57,7 @@ h1 {
   background-position-y: center;
   border-bottom: 1px solid #dadada;
   height: 55px;
+  cursor: pointer;
 }
 
 #serverAddress {
