--- a/app/styles/fonts.css
+++ b/app/styles/fonts.css
@@ -1,28 +1,13 @@
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
-  font-weight: 300;
-  src: local('Roboto Light'), local('Roboto-Light'), url('https://sidebar-classic.acrolinx-cloud.com/v14.3/prod/fonts/Roboto-Thin.ttf') format('truetype');
-}
-
-
-@font-face {
-  font-family: 'Roboto';
-  font-style: normal;
   font-weight: 400;
-  src: local('Roboto Regular'), local('Roboto-Regular'), url('https://sidebar-classic.acrolinx-cloud.com/v14.3/prod/fonts/Roboto-Medium.ttf') format('truetype');
+  src: local('Roboto Regular'), local('Roboto-Regular'), url('../fonts/Roboto-Regular.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 700;
-  src: local('Roboto Bold'), local('Roboto-Bold'), url('https://sidebar-classic.acrolinx-cloud.com/v14.3/prod/fonts/Roboto-Bold.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto';
-  font-style: italic;
-  font-weight: 400;
-  src: local('Roboto Italic'), local('Roboto-Italic'), url('https://sidebar-classic.acrolinx-cloud.com/v14.3/prod/fonts/Roboto-Italic.ttf') format('truetype');
+  src: local('Roboto Bold'), local('Roboto-Bold'), url('../fonts/Roboto-Bold.ttf') format('truetype');
 }
