--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -63,12 +63,14 @@ h1 {
 }
 
 .submitButton {
+  font-size: 12px;
+  font-weight: 700;
+  font-family: 'Roboto', 'Arial', sans-serif;
   border-radius: 2px;
   padding: 0 10px;
   line-height: 27px;
   background-color: #3e96db;
   color: #fff;
-  font-weight: 700;
   border: none;
   cursor: pointer;
   margin:  0 0 0 auto;
