DEV-11282: Move Sidebar Edition Options to Sidebar
* Started About Page
* Moved Logfile section into About Page
* Added Preact
* Added Prepack

--- a/src/styles/icons.less
+++ b/src/styles/icons.less
@@ -11,3 +11,7 @@
 .icon-vpn-lock-grey {
   .icon-replace-fill("./icons/ic_vpn_lock.svg", "#000000", @sidebar-grey);
 }
+
+.icon-arrow-back {
+  .icon-replace-fill("./icons/ic_arrow_back.svg", "#000000", @sidebar-grey);
+}
