--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -23,14 +23,23 @@ h1 {
   font-weight: 400;
 }
 
+a {
+  color: @acroBlue;
+  text-decoration: none;
+  &:hover {
+    color: @linkHover;
+    text-decoration: underline;
+  }
+}
+
 .loginHeader {
   background: url(../images/acrolinx-claim.svg) no-repeat;
   background-size: 213px;
-  background-position-x: 15px;
+  background-position-x: @horizontalPageMargin;
   background-position-y: center;
-  border-bottom: 1px solid #dadada;
   height: 55px;
   cursor: pointer;
+  .bottomGreyBorder();
 }
 
 
@@ -104,7 +113,7 @@ h1 {
 }
 
 .formContent {
-  padding: 0 15px 0;
+  .horizontalPageMargins();
 }
 
 #sidebarContainer,
@@ -119,7 +128,7 @@ h1 {
 }
 
 #errorMessage {
-  margin: 0 15px 15px;
+  .horizontalPageMargins();
   background-color: @acroRed;
   color: #fff;
   border-radius: 4px;
