DEV-11282: Move Sidebar Edition Options to Sidebar
* Display clientComponents

--- a/src/styles/about.less
+++ b/src/styles/about.less
@@ -17,3 +17,19 @@
 .logfileLocationValue {
   word-break: break-all;
 }
+
+.about-tab-label {
+  color: @text-dark-grey;
+  padding-bottom: 4px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.about-tab-value {
+  color: @sidebar-grey;
+  word-wrap: break-word;
+}
+
+div.about-item {
+  margin-bottom: 18px;
+}
