--- a/src/styles/colors.less
+++ b/src/styles/colors.less
@@ -2,4 +2,6 @@
 @acroBlue: #3e96db;
 @acroRed: #f0556a;
 @border-grey: #dadada;
-@linkHover: #373737;
+@text-dark-grey: #373737;
+
+@linkHover: @text-dark-grey;
