--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -141,3 +141,18 @@ a {
 #logfileLocationValue {
   width: 100%;
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: white;
+  border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  background-color: @border-grey;
+}
