Moved preact components and corresponding styles into subfolder "components"

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -3,5 +3,5 @@
 @import "colors";
 @import "icons";
 @import "global";
-@import "about";
-@import "server-selector-form";
+@import "components/about";
+@import "components/server-selector-form";
