DEV-11282: Move Sidebar Edition Options to Sidebar
* Added external help links with dummy URLS

--- a/src/styles/components/about.less
+++ b/src/styles/components/about.less
@@ -52,3 +52,8 @@
 div.about-item {
   margin-bottom: 18px;
 }
+
+.aboutComponent .externalTextLink {
+  display: block;
+  .horizontalPageMargins();
+}
