--- a/src/styles/components/server-selector-form.less
+++ b/src/styles/components/server-selector-form.less
@@ -14,6 +14,10 @@
 
 .formContent {
   .horizontalPageMargins();
+
+  .buttonGroup .externalTextLink {
+    float: left;
+  }
 }
 
 .httpsRequiredIcon {
