--- a/src/styles/components/server-selector-form.less
+++ b/src/styles/components/server-selector-form.less
@@ -1,9 +1,9 @@
-.loginHeader {
-  background: url(../images/acrolinx-claim.svg) no-repeat;
-  background-size: 213px;
+.logoHeader {
+  background: url(../images/acrolinx-logo.svg) no-repeat;
+  background-size: auto 19px;
   background-position-x: @horizontalPageMargin;
   background-position-y: center;
-  height: 55px;
+  height: 56px;
   cursor: pointer;
   .bottomGreyBorder();
 }
