--- a/src/styles/components/about.less
+++ b/src/styles/components/about.less
@@ -14,6 +14,7 @@
   .bottomGreyBorder();
   flex-shrink: 0;
   background-position-x: @horizontalPageMargin+32px;
+  cursor: pointer;
 
   .icon-arrow-back {
     display: inline-block;
