DEV-11282: Move Sidebar Edition Options to Sidebar
* Improved styling of links on server selector form

--- a/src/styles/components/server-selector-form.less
+++ b/src/styles/components/server-selector-form.less
@@ -14,8 +14,11 @@
 .formContent {
   .horizontalPageMargins();
 
-  .buttonGroup .externalTextLink {
-    float: left;
+  .buttonGroup {
+    margin-bottom: 15px;
+    .externalTextLink {
+      float: left;
+    }
   }
 }
 
