DEV-11282: Move Sidebar Edition Options to Sidebar
* Removed display of LogFileLocation
* Made log file and help section sticky to the bottom

--- a/src/styles/components/about.less
+++ b/src/styles/components/about.less
@@ -25,20 +25,35 @@
   }
 }
 
-
 .aboutBody {
   flex-grow: 1;
   overflow-y: auto;
   padding-bottom: 15px;
+  .bottomGreyBorder();
+}
+
+.aboutFooter {
+  .logFileSection {
+    .bottomGreyBorder();
+
+    .openLogFileTitle {
+      float: left;
+    }
+    padding: @horizontalPageMargin;
+  }
+
+  .externalTextLink {
+    display: block;
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
 }
 
 .aboutMain {
   .horizontalPageMargins();
 }
 
-.logFileContent{
-  .horizontalPageMargins();
-}
+
 
 .logfileLocationValue {
   word-break: break-all;
