--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -12,8 +12,9 @@ html, body, #app {
   box-sizing: inherit;
 }
 
-html #app input {
+html #app input, html #app textarea {
   font-family: 'Roboto', 'Arial', sans-serif;
+  font-size: 13px;
 }
 
 h1 {
@@ -72,16 +73,7 @@ a {
   box-sizing: border-box;
 }
 
-#errorMessage {
-  .horizontalPageMargins();
-  background-color: @acroRed;
-  color: #fff;
-  border-radius: 4px;
-  padding: 1.5em;
-  font-size: 13px;
-  margin-top: 1em;
-  font-weight: 400;
-}
+
 
 ::-webkit-scrollbar {
   width: 8px;
