DEV-12833: Given failed connection, Sidebar start page should show CORS address in error message details
* Reworked error message layout and scrolling

--- a/src/styles/components/about.less
+++ b/src/styles/components/about.less
@@ -3,16 +3,12 @@
 }
 
 .aboutComponent {
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-  height: 100%;
+  .verticalFlexBox();
 }
 
 .aboutHeader {
   .logoHeader();
   .bottomGreyBorder();
-  flex-shrink: 0;
   background-position-x: @horizontalPageMargin+32px;
   cursor: pointer;
 
