Improved button styling

--- a/src/styles/components/error-message.less
+++ b/src/styles/components/error-message.less
@@ -14,12 +14,11 @@
     text-align: right;
 
     .detailsButton {
+      .commonButton();
       .user-select(none);
-      letter-spacing: 0.2px;
       display: inline-block;
       color: #ffffff;
       text-align: right;
-      cursor: pointer;
       padding: 0 15px;
       line-height: 30px;
       &:hover {
