--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -41,6 +41,7 @@ a {
 @BUTTON_LINE_HEIGHT: 27px;
 
 .submitButton {
+  .commonButton();
   font-size: 12px;
   font-weight: 700;
   font-family: 'Roboto', 'Arial', sans-serif;
@@ -50,7 +51,6 @@ a {
   background-color: @acroBlue;
   color: #fff;
   border: none;
-  cursor: pointer;
   margin: 0 0 0 auto;
 }
 
