--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -20,3 +20,9 @@
   overflow: hidden;
   height: 100%;
 }
+
+.commonButton() {
+  text-transform: uppercase;
+  letter-spacing: 0.2px;
+  cursor: pointer;
+}
