Fixed scroll problems in Eclipse Neo (AppleWebKit/538.15)

--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -15,8 +15,8 @@
 }
 
 .verticalFlexBox() {
-  display: flex;
-  flex-direction: column;
+  .flex-display();
+  .flex-direction(column);
   overflow: hidden;
   height: 100%;
 }
