--- a/src/styles/components/server-selector-form.less
+++ b/src/styles/components/server-selector-form.less
@@ -7,7 +7,7 @@
 }
 
 .logoHeader {
-  flex-shrink: 0;
+  .flex-shrink(0);
   background: url(../images/acrolinx-logo.svg) no-repeat;
   background-size: auto 19px;
   background-position-x: @horizontalPageMargin;
@@ -24,7 +24,7 @@
   margin-left: @horizontalPageMargin;
   padding-right: @horizontalPageMargin;
 
-  flex-grow: 1;
+  .flex-grow(1);
   overflow-y: auto;
 
   .buttonGroup {
