DEV-13326 Help link needs to appear at top of sidebar/start page for easy accessibility

--- a/src/styles/components/about.less
+++ b/src/styles/components/about.less
@@ -15,9 +15,7 @@
   .icon-arrow-back {
     display: inline-block;
     margin-left: @horizontalPageMargin;
-    background-position-y: center;
-    height: 55px;
-    width: 24px;
+    .headerIcon();
   }
 }
 
@@ -30,19 +28,12 @@
 
 .aboutFooter {
   .logFileSection {
-    .bottomGreyBorder();
-
     .openLogFileTitle {
       float: left;
     }
     padding: @horizontalPageMargin;
   }
 
-  .externalTextLink {
-    display: block;
-    padding-top: 15px;
-    padding-bottom: 15px;
-  }
 }
 
 .aboutMain {
