--- a/src/styles/icons.less
+++ b/src/styles/icons.less
@@ -13,5 +13,9 @@
 }
 
 .icon-arrow-back {
-  .icon-replace-fill("./icons/ic_arrow_back.svg", "#000000", @sidebar-grey);
+  .icon-replace-fill("./icons/ic_arrow_back.svg", "#000000", @text-dark-grey);
+}
+
+.icon-help {
+  .icon-replace-fill("./icons/ic_help.svg", "#000000", @text-dark-grey);
 }
