--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -26,3 +26,14 @@
   letter-spacing: 0.2px;
   cursor: pointer;
 }
+
+.headerIcon () {
+  background-position-y: center;
+  height: 55px;
+  width: 24px;
+  opacity: 0.38194; /* @text-dark-grey (#373737) => @sidebar-grey (#909090) */
+  &:hover {
+    opacity: 1;
+  }
+}
+
