--- a/src/styles/components/server-selector-form.less
+++ b/src/styles/components/server-selector-form.less
@@ -7,6 +7,7 @@
 }
 
 .logoHeader {
+  position: relative;
   .flex-shrink(0);
   background: url(../images/acrolinx-logo.svg) no-repeat;
   background-size: auto 19px;
@@ -14,6 +15,14 @@
   background-position-y: center;
   height: 56px;
   .bottomGreyBorder();
+
+  .icon-help {
+    position: absolute;
+    top: 0;
+    right: @horizontalPageMargin;
+    display: block;
+    .headerIcon();
+  }
 }
 
 .serverAddressTitle {
