DEV-13326 Help link needs to appear at top of sidebar/start page for easy accessibility
* Corrected opacity of help icon

--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -27,11 +27,13 @@
   cursor: pointer;
 }
 
+@opactiySoftblackToGrey: 0.555; /*  (0xff-0x90)/(0xff-0x37) */
+
 .headerIcon () {
   background-position-y: center;
   height: 55px;
   width: 24px;
-  opacity: 0.38194; /* @text-dark-grey (#373737) => @sidebar-grey (#909090) */
+  opacity: @opactiySoftblackToGrey; /* @text-dark-grey (#373737) => @sidebar-grey (#909090) */
   &:hover {
     opacity: 1;
   }
