DEV-13091: Style change (padding of error messages)

--- a/src/styles/components/error-message.less
+++ b/src/styles/components/error-message.less
@@ -4,7 +4,6 @@
   font-weight: 400;
   padding: 15px;
   color: #fff;
-  border-radius: 4px;
   background-color: @acroRed;
 
   .errorMessageMain {
@@ -19,7 +18,7 @@
       display: inline-block;
       color: #ffffff;
       text-align: right;
-      padding: 0 15px;
+      padding: 0 @horizontalPageMargin;
       line-height: 30px;
       &:hover {
         background-color: #f26a7c;
