--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -7,4 +7,4 @@
 @import "components/about";
 @import "components/server-selector-form";
 @import "components/error-message";
-@import "loading-sidebar";
+@import "loader";
