--- a/src/styles/loader.less
+++ b/src/styles/loader.less
@@ -1,19 +1,73 @@
+.loader,
+.loader:after {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+}
+
+.loader {
+  box-sizing: content-box;
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  top: 50%;
+  left: 50%;
+  border: 10px solid rgba(144, 144, 144, 0.2);
+  border-left-color: #F44336;
+  transition: border-left-color 0.5s;
+  -webkit-transform: translateZ(0) translateX(-50%) translateY(-50%);
+  -ms-transform: translateZ(0) translateX(-50%) translateY(-50%);;
+  transform: translateZ(0) translateX(-50%) translateY(-50%);
+  -webkit-animation: load8 1.1s infinite linear;
+  animation: load8 1.1s infinite linear;
+}
+
+.loaderJsLoaded {
+  border-left-color: #2196F3;
+}
+
+.loader .fallbackLoadingMessage {
+  display: none;
+}
+
+@-webkit-keyframes load8 {
+  0% {
+    -webkit-transform: translateX(-50%) translateY(-50%) rotate(0deg);
+    transform: translateX(-50%) translateY(-50%) rotate(0deg);
+  }
+  100% {
+    -webkit-transform: translateX(-50%) translateY(-50%) rotate(360deg);
+    transform: translateX(-50%) translateY(-50%) rotate(360deg);
+  }
+}
+
+@keyframes load8 {
+  0% {
+    -webkit-transform: translateX(-50%) translateY(-50%) rotate(0deg);
+    transform: translateX(-50%) translateY(-50%) rotate(0deg);
+  }
+  100% {
+    -webkit-transform: translateX(-50%) translateY(-50%) rotate(360deg);
+    transform: translateX(-50%) translateY(-50%) rotate(360deg);
+  }
+}
+
 .loader.loadSidebarHtml {
   -webkit-animation: loadRotateLeft 1.1s infinite linear;
   animation: loadRotateLeft 1.1s infinite linear;
 }
 
-
 @-webkit-keyframes loadRotateLeft {
   0% {
     -webkit-transform: translateX(-50%) translateY(-50%) rotate(0deg);
-    transform: translateX(-50%) translateY(-50%) rotate(0deg) ;
+    transform: translateX(-50%) translateY(-50%) rotate(0deg);
   }
   100% {
     -webkit-transform: translateX(-50%) translateY(-50%) rotate(-360deg);
     transform: translateX(-50%) translateY(-50%) rotate(-360deg);
   }
 }
+
 @keyframes loadRotateLeft {
   0% {
     -webkit-transform: translateX(-50%) translateY(-50%) rotate(0deg);
